# KaZa-Server-Knx

./: CMakeLists.txt  README.md  qmldir
src/: knxbus.cpp  knxbus.h  knxobject.cpp  knxobject.h  plugin.cpp  plugin.h
